更换base64解码类